# MonteWallet

./: README.md  pyproject.toml
data/input/: AAPL_from_2024-07-01_to_2024-12-31.csv  AMGN_from_2024-07-01_to_2024-12-31.csv  AMZN_from_2024-07-01_to_2024-12-31.csv  AXP_from_2024-07-01_to_2024-12-31.csv  BA_from_2024-07-01_to_2024-12-31.csv  CAT_from_2024-07-01_to_2024-12-31.csv  CRM_from_2024-07-01_to_2024-12-31.csv  CSCO_from_2024-07-01_to_2024-12-31.csv  CVX_from_2024-07-01_to_2024-12-31.csv  DIS_from_2024-07-01_to_2024-12-31.csv  GS_from_2024-07-01_to_2024-12-31.csv  HD_from_2024-07-01_to_2024-12-31.csv  HON_from_2024-07-01_to_2024-12-31.csv  IBM_from_2024-07-01_to_2024-12-31.csv  JNJ_from_2024-07-01_to_2024-12-31.csv  JPM_from_2024-07-01_to_2024-12-31.csv  KO_from_2024-07-01_to_2024-12-31.csv  MCD_from_2024-07-01_to_2024-12-31.csv  MMM_from_2024-07-01_to_2024-12-31.csv  MRK_from_2024-07-01_to_2024-12-31.csv  MSFT_from_2024-07-01_to_2024-12-31.csv  NKE_from_2024-07-01_to_2024-12-31.csv  NVDA_from_2024-07-01_to_2024-12-31.csv  PG_from_2024-07-01_to_2024-12-31.csv  SHW_from_2024-07-01_to_2024-12-31.csv  TRV_from_2024-07-01_to_2024-12-31.csv  UNH_from_2024-07-01_to_2024-12-31.csv  VZ_from_2024-07-01_to_2024-12-31.csv  V_from_2024-07-01_to_2024-12-31.csv  WMT_from_2024-07-01_to_2024-12-31.csv
src/: data_loader.py  indexes.py  logger.py  main.py  simulate.py
